// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots EmptyState Default 1`] = `
<div
  className="sc-bwzfXH bMpfHL"
>
  <div
    className="sc-bwzfXH aDbAH"
  >
    <div
      aria-hidden={true}
      className="sc-chPdSV amzEV"
      dangerouslySetInnerHTML={
        Object {
          "__html": "test-file-stub",
        }
      }
      role="img"
    />
    <div
      className="sc-bwzfXH fbBXOr"
    >
      <div
        className="sc-kAzzGY YNdEk"
        role="heading"
      >
        No filters applied
      </div>
    </div>
    <div
      className="sc-bwzfXH eTHzfe"
    >
      <p
        className="sc-bxivhb ieIXlT"
      >
        ..A tumbleweed passes by
      </p>
    </div>
  </div>
</div>
`;

exports[`Storyshots EmptyState With button (as children) 1`] = `
<div
  className="sc-bwzfXH bMpfHL"
>
  <div
    className="sc-bwzfXH aDbAH"
  >
    <div
      aria-hidden={true}
      className="sc-chPdSV amzEV"
      dangerouslySetInnerHTML={
        Object {
          "__html": "test-file-stub",
        }
      }
      role="img"
    />
    <div
      className="sc-bwzfXH fbBXOr"
    >
      <div
        className="sc-kAzzGY YNdEk"
        role="heading"
      >
        No filters applied
      </div>
    </div>
    <div
      className="sc-bwzfXH eTHzfe"
    >
      <p
        className="sc-bxivhb ieIXlT"
      >
        There are no filters applied yet. Use the button below to apply a filter.
      </p>
    </div>
    <button
      className="sc-VigVT eYHbkk sc-htoDjs ifkBJX"
      disabled={undefined}
      id={undefined}
      onClick={[Function]}
      title="Add filter"
      type="button"
    >
      Add filter
    </button>
  </div>
</div>
`;
